tests/failing/empty_struct_test.rs
use redbit::*;

#[derive(Entity)]
struct EmptyStruct {

}

fn main() {
    // If it compiles successfully, we're good.
}
